# trading-lab

./: README.md  pyproject.toml
.github/: beam-trigger.txt  fair-ml-aurora-vs-github-30m-trigger.txt  monthly-multi-asset-loop-trigger.txt  monthly-risk-loop-trigger.txt  print-fair-ml-results-trigger.txt  train-only-verify-trigger.txt  weekly-7methods-12h-trigger.txt  weekly-7methods-5h-trigger.txt  weekly-7methods-merge-only-trigger.txt  weekly-7methods-overnight-merge-6methods-trigger.txt  weekly-multi-asset-sharpe-10methods-4h-trigger.txt  weekly-multi-asset-sharpe-positive-5methods-1h-compare-trigger.txt  weekly-multi-asset-sharpe-positive-8methods-9h-500-trigger.txt  weekly-multi-asset-sharpe-positive-8methods-universal-robustness-trigger.txt  weekly-multi-asset-universal-robustness-trigger.txt
configs/: annual_feature_manifest.csv  annual_sp500_crisis_stable.yaml  annual_sp500_train_only_verify_loop.yaml  annual_sp500_train_validation_100_wide.yaml  monthly_multi_asset.yaml  survival_github.yaml  weekly_7methods_12h_stateful.yaml  weekly_7methods_5h_fair.yaml  weekly_7methods_overnight.yaml  weekly_7methods_overnight_6methods_merge.yaml  weekly_beam_genetic_2h_max_calmar.yaml  weekly_multi_asset_sharpe_10methods_4h_waves.yaml  weekly_multi_asset_sharpe_positive_5methods_1h_compare.yaml  weekly_multi_asset_sharpe_positive_8methods_9h_500.yaml  weekly_multi_asset_sp500_down_5pct.yaml  weekly_sharpe_3methods_max_parallel_900.yaml  weekly_spy_sharpe_10methods_9h_waves.yaml  weekly_spy_sharpe_4methods_180.yaml
scripts/: audit_annual_features.py  (+32 more)
(+89 files in other folders)
