[project]
name = "trading-lab"
version = "0.1.0"
description = "Reproducible backtesting and staged optimization for GitHub Actions and Codespaces."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]
hpo = [
    "optuna>=4.3,<5",
    "scikit-learn>=1.5,<2",
    "ConfigSpace>=1.2,<2",
    "smac>=2.2,<3",
    "dehb>=0.1,<1",
    "hpbandster>=0.7,<1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
